force-app/main/default/objects/MarketingForm__c/MarketingForm__c.object-meta.xml
<CustomObject>
    <label>Marketing Form</label>
    <nameField>
        <label>Marketing Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>