force-app/main/default/objects/MarketingForm__c/fields/Additional_Info_for_us__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_for_us__c</fullName>
    <description>Is there anything else you would like us to know?</description>
    <label>Additional Info for us?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>