force-app/main/default/objects/MarketingForm__c/fields/Began_in_afterschool_field__c.field-meta.xml
<CustomField>
    <fullName>Began_in_afterschool_field__c</fullName>
    <description>When did you begin working in the afterschool, summer, and expanded learning field?</description>
    <label>Began in afterschool field:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>