force-app/main/default/objects/MarketingForm__c/fields/Benefits_of_afterschool_for_youth__c.field-meta.xml
<CustomField>
    <fullName>Benefits_of_afterschool_for_youth__c</fullName>
    <description>What would you say are the benefits of afterschool-for youth, families, and/or the community?</description>
    <label>Benefits of afterschool-for youth?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>