force-app/main/default/objects/MarketingForm__c/fields/Current_roleconnection_to_afterschool__c.field-meta.xml
<CustomField>
    <fullName>Current_roleconnection_to_afterschool__c</fullName>
    <description>What is your current role and how does it connect to the afterschool, summer and expanded learning field?</description>
    <label>Current role/connection to afterschool?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>