force-app/main/default/objects/MarketingForm__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email Address</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>