force-app/main/default/objects/MarketingForm__c/fields/Favorite_part_of_your_job__c.field-meta.xml
<CustomField>
    <fullName>Favorite_part_of_your_job__c</fullName>
    <description>What is your favorite part of your job?</description>
    <label>Favorite part of your job?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>