force-app/main/default/objects/MarketingForm__c/fields/Marketing_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Form_Type__c</fullName>
    <label>Marketing Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC Spotlight</fullName>
            </value>
            <value>
                <fullName>Program Spotlight</fullName>
            </value>
            <value>
                <fullName>DEI Spotlight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>