force-app/main/default/objects/MarketingForm__c/fields/Please_list_your_organizations_name__c.field-meta.xml
<CustomField>
    <fullName>Please_list_your_organizations_name__c</fullName>
    <description>Please list your organization&apos;s name</description>
    <label>Please list your organization&apos;s name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>