force-app/main/default/objects/MarketingForm__c/fields/Region_of_NY_organization_located__c.field-meta.xml
<CustomField>
    <fullName>Region_of_NY_organization_located__c</fullName>
    <description>What region of NY is your organization located?</description>
    <label>Region of NY organization located?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>