force-app/main/default/objects/MarketingForm__c/fields/Specific_program_highlight__c.field-meta.xml
<CustomField>
    <fullName>Specific_program_highlight__c</fullName>
    <description>Is there a specific program, event, initiative from your organization you would like to highlight?</description>
    <label>Specific program highlight?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>