force-app/main/default/objects/MarketingForm__c/fields/Why_decide_to_pursue_a_career_in_field__c.field-meta.xml
<CustomField>
    <fullName>Why_decide_to_pursue_a_career_in_field__c</fullName>
    <description>Why did you decide to pursue a career in this field?</description>
    <label>Why decide to pursue a career in field?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>